--- a/manifest.json
+++ b/manifest.json
@@ -11,61 +11,61 @@
     "categories": ["education", "language"],
     "icons": [
         {
-            "src": "icons/icon-72.png",
+            "src": "icon-72.png",
             "sizes": "72x72",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-96.png",
+            "src": "icon-96.png",
             "sizes": "96x96",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-128.png",
+            "src": "icon-128.png",
             "sizes": "128x128",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-144.png",
+            "src": "icon-144.png",
             "sizes": "144x144",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-152.png",
+            "src": "icon-152.png",
             "sizes": "152x152",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-192.png",
+            "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-384.png",
+            "src": "icon-384.png",
             "sizes": "384x384",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-512.png",
+            "src": "icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "icons/icon-192.png",
+            "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/icon-512.png",
+            "src": "icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
@@ -73,7 +73,7 @@
     ],
     "screenshots": [
         {
-            "src": "icons/screenshot1.png",
+            "src": "screenshot1.png",
             "sizes": "540x720",
             "type": "image/png",
             "form_factor": "narrow",
@@ -86,14 +86,14 @@
             "short_name": "Fiszki",
             "description": "Rozpocznij naukę z fiszkami",
             "url": "./index.html?mode=flashcards",
-            "icons": [{ "src": "icons/icon-96.png", "sizes": "96x96", "type": "image/png" }]
+            "icons": [{ "src": "icon-96.png", "sizes": "96x96", "type": "image/png" }]
         },
         {
             "name": "Quiz",
             "short_name": "Quiz",
             "description": "Sprawdź swoją wiedzę",
             "url": "./index.html?mode=quiz",
-            "icons": [{ "src": "icons/icon-96.png", "sizes": "96x96", "type": "image/png" }]
+            "icons": [{ "src": "icon-96.png", "sizes": "96x96", "type": "image/png" }]
         }
     ]
 }
